# pdf-autorag-qa

./: .gitignore  DOCUMENTATION_UPDATE_SUMMARY.md  README.md  adaptive_categories.json  adaptive_rag_pipeline.py  ai_tinkerers_presentation_script.md  audio_equipment_domain_questions.json  cli_pdf_qa.py  domain_eval_analysis.json  domain_eval_gpu.py  domain_eval_results.csv  fixed_rag_comparison_report.json  prompts.json  pyproject.toml  qa_autorag_evaluator.py  qa_base_model_evaluator.py  qa_enhanced_adaptive_evaluator.py  qa_faiss_builder.py  qa_metadata.json  qa_pair_selector.py  rag_comparison_analyzer.py  rag_demo_questions.py  rag_vs_base_comparison.py  requirements-domain-eval.txt  requirements-hf.txt  run_st_tests.py  test_adaptive_rag.py  test_deps.py  test_enhanced_pipeline_fix.py  test_faiss_gpu.py  test_pipeline.py  test_rag_comparison_report.json  training_dataset_generator.py
.github/workflows/: pdf-qa-autorag.yaml
autorag_results/: chatml_format.jsonl  final_evaluation_report.json  hf_dataset.json  high_quality_pairs.json  high_quality_pairs.jsonl  high_quality_pairs_detailed.jsonl  rag_comparison_report.json
autorag_results/adaptive_pipeline/: adaptive_rag_evaluation.csv
autorag_results/adaptive_rag/: qa_rag_evaluation_report.json
autorag_results/standard_rag/: qa_rag_evaluation_report.json
docs/: README.md  adaptive_rag_improvements.md  architecture.md  cli_pdf_qa.md  domain_eval_gpu.md  domain_evaluation_framework.md  dual_rag_architecture.md  enhanced_adaptive_integration_status.md  qa_autorag_evaluator.md  qa_faiss_builder.md  qa_pair_selector.md  takeaways.md  training_dataset_generator.md
outputs/: pdf_qa_advanced_conservative_20250909_071616.prompts_advanced_conservative.json  pdf_qa_basic_balanced_20250909_070947.performance.json  pdf_qa_basic_balanced_20250909_070947.prompts_basic_balanced.json  pdf_qa_basic_conservative_20250909_071043.performance.json  pdf_qa_basic_high_creativity_20250909_070808.jsonl  pdf_qa_intermediate_balanced_20250909_071228.performance.json  pdf_qa_intermediate_high_creativity_20250909_071131.performance.json  pdf_qa_intermediate_high_creativity_20250909_071131.prompts_intermediate_high_creativity.json
pdf-qa-autorag-dual-rag-complete/: domain_eval_analysis.json  domain_eval_results.csv
pdf-qa-autorag-dual-rag-complete-adaptive/: domain_eval_analysis.json  domain_eval_results.csv
pdf-qa-autorag-dual-rag-complete-adaptive/autorag_results/: chatml_format.jsonl  final_evaluation_report.json  hf_dataset.json  high_quality_pairs.json  high_quality_pairs.jsonl  high_quality_pairs_detailed.jsonl  rag_comparison_report.json
pdf-qa-autorag-dual-rag-complete-adaptive/outputs/: pdf_qa_advanced_balanced_20250909_071515.jsonl  pdf_qa_advanced_balanced_20250909_071515.performance.json  pdf_qa_advanced_balanced_20250909_071515.prompts_advanced_balanced.json  pdf_qa_advanced_balanced_20250909_072930.jsonl  pdf_qa_advanced_balanced_20250909_072930.performance.json  pdf_qa_advanced_balanced_20250909_072930.prompts_advanced_balanced.json  pdf_qa_advanced_balanced_20250910_054608.jsonl  pdf_qa_advanced_balanced_20250910_054608.performance.json  pdf_qa_advanced_balanced_20250910_054608.prompts_advanced_balanced.json  pdf_qa_advanced_conservative_20250909_071616.performance.json  pdf_qa_advanced_conservative_20250909_073027.performance.json  pdf_qa_advanced_conservative_20250909_073027.prompts_advanced_conservative.json  pdf_qa_advanced_conservative_20250910_054740.performance.json  pdf_qa_advanced_conservative_20250910_054740.prompts_advanced_conservative.json  pdf_qa_advanced_high_creativity_20250909_071414.performance.json  pdf_qa_advanced_high_creativity_20250909_071414.prompts_advanced_high_creativity.json  pdf_qa_advanced_high_creativity_20250909_072833.jsonl  pdf_qa_advanced_high_creativity_20250909_072833.performance.json  (+42 more)
qa_extraction_lib/: __init__.py  base_extractor.py  pdf_generator.py  performance_analytics.py  prompt_manager.py  text_processing.py  transcript_extractor.py
rag_input/: selected_qa_pairs.json  selection_summary.json
rag_store/: model_info.json
tests/: test_sentence_transformers.py
(+83 files in other folders)
