[project]
name = "autorag-audio-pipeline"
version = "0.1.0"
description = "GPU-accelerated Q&A extraction and RAG evaluation pipeline for audio equipment documentation"
authors = [
    {name = "AI Tinkerer", email = "tinkerer@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # Core ML dependencies
    "torch>=2.1.0",
    "transformers>=4.42.0",
    "accelerate>=0.24.0",
    "bitsandbytes>=0.41.0",
    
    # Vector search and embeddings
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    
    # Evaluation and metrics
    "bert-score>=0.3.13",
    "scikit-learn>=1.3.0",
    "rank-bm25>=0.2.2",
    
    # Data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0,<2.0.0",
    "tqdm>=4.65.0",
    
    # PDF processing
    "PyPDF2>=3.0.0",
    "PyMuPDF>=1.23.0",
    
    # Optional performance
    "optimum>=1.8.0",
    "datasets>=2.12.0",
    "hf_transfer>=0.1.3",
    "multiprocess>=0.70.0",
    "psutil>=5.9.0",
    
    # Additional dependencies for pipeline
    "huggingface-hub>=0.20.0",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^23.0.0"

[tool.poetry.group.gpu.dependencies]
# FAISS GPU is platform-specific, install manually:
# pip install faiss-gpu
# or use conda: conda install -c pytorch faiss-gpu

[tool.poetry.extras]
gpu = []

# Manual GPU setup:
# poetry install 
# pip install faiss-gpu  # Install GPU version manually